--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html>
 <head>
     <title>個人網頁</title>
-    <link rel="stylesheet" type="text/css" href="css\styles.css">
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 <body>
     <div class="container">
         <div class="content-wrapper">
             <div class="sidebar">
-                <img src="assets\IMG_6316.jpg" alt="Profile Picture">
+                <img src="assets/IMG_6316.jpg" alt="Profile Picture">
                 <h2>曾柏瑜</h2>
                 <p>南臺科技大學 資訊工程系</p>
                 <div class="separator"></div>
@@ -16,7 +16,7 @@
                     <span class="contact-icon">&#9993;</span>
                     <div>
                         <span class="contact-label">EMAIL</span>
-                        <p><a href="zxc1112508@gmail.com">zxc1112508@gmail.com</a></p>
+                        <p><a href="mailto:zxc1112508@gmail.com">zxc1112508@gmail.com</a></p>
                     </div>
                 </div>
             </div>
@@ -62,7 +62,7 @@
                         <span class="contact-icon">&#9993;</span>
                         <div>
                             <span class="contact-label">EMAIL</span>
-                            <p><a href="zxc1112508@gmail.com">zxc1112508@gmail.com</a></p>
+                            <p><a href="mailto:zxc1112508@gmail.com">zxc1112508@gmail.com</a></p>
                         </div>
                     </div>
                 </div>
