--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
                 <div class="separator"></div>
                 <div class="contact-info">
                     <span class="contact-icon">&#9993;</span>
-                    <div>
-                        <span class="contact-label">EMAIL</span>
-                        <p><a href="mailto:zxc1112508@gmail.com">zxc1112508@gmail.com</a></p>
+                    <div class="contact-info">
+                        <p class="contact-title">Email</p>
+                        <span class="contact-link" onclick="location.href='mailto:zxc1112508@gmail.com'">zxc1112508@gmail.com</span>
                     </div>
                 </div>
             </div>
@@ -70,32 +70,6 @@
         </div>
     </div>
 
-    <script>
-        const menuLinks = document.querySelectorAll('.menu a');
-        const contentSections = document.querySelectorAll('.content');
-
-        menuLinks.forEach(link => {
-            link.addEventListener('click', (event) => {
-                event.preventDefault();
-
-                // 移除先前選中的按鈕
-                menuLinks.forEach(link => {
-                    link.classList.remove('selected');
-                });
-
-                // 隱藏先前顯示的內容
-                contentSections.forEach(section => {
-                    section.classList.add('hidden');
-                });
-
-                // 更新選中的按鈕
-                link.classList.add('selected');
-
-                // 顯示相應的內容
-                const target = link.getAttribute('href');
-                document.querySelector(target).classList.remove('hidden');
-            });
-        });
-    </script>
+    <script src="js/script.js"></script>
 </body>
 </html>
