--- a/index.html
+++ b/index.html
@@ -13,10 +13,12 @@
                 <p>南臺科技大學 資訊工程系</p>
                 <div class="separator"></div>
                 <div class="contact-info">
-                    <span class="contact-icon">&#9993;</span>
                     <div class="contact-info">
-                        <p class="contact-title">Email</p>
-                        <span class="contact-link" onclick="location.href='mailto:zxc1112508@gmail.com'">zxc1112508@gmail.com</span>
+                        <span class="contact-icon">&#9993;</span>
+                        <div>
+                            <span class="contact-label">EMAIL</span>
+                            <p><a href="mailto:zxc1112508@gmail.com">zxc1112508@gmail.com</a></p>
+                        </div>
                     </div>
                 </div>
             </div>
