--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>個人網頁</title>
     <link rel="stylesheet" type="text/css" href="css/styles.css">
+    <script src="https://kit.fontawesome.com/97fd0beeb0.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="container">
@@ -14,13 +15,21 @@
                 <div class="separator"></div>
                 <div class="contact-info">
                     <div class="contact-info">
-                        <span class="contact-icon">&#9993;</span>
+                        <span class="contact-icon"><i class="fas fa-envelope"></i></span>
                         <div>
                             <span class="contact-label">EMAIL</span>
                             <p><a href="mailto:zxc1112508@gmail.com">zxc1112508@gmail.com</a></p>
                         </div>
                     </div>
                 </div>
+                <div class="contact-info">
+                    <span class="contact-icon"><i class="fas fa-location-dot"></i></span>
+                    <div>
+                      <span class="contact-label">居住地</span>
+                      <p>Taichung, Taiwan</p>
+                    </div>
+                  </div>
+                   
             </div>
 
             <div class="main-content">
@@ -61,7 +70,7 @@
                 <div id="contact" class="content hidden">
                     <h2>Contact</h2>
                     <div class="contact-info">
-                        <span class="contact-icon">&#9993;</span>
+                        <span class="contact-icon"><i class="fas fa-envelope"></i></span>
                         <div>
                             <span class="contact-label">EMAIL</span>
                             <p><a href="mailto:zxc1112508@gmail.com">zxc1112508@gmail.com</a></p>
