--- a/index.html
+++ b/index.html
@@ -14,22 +14,19 @@
                 <p>南臺科技大學 資訊工程系</p>
                 <div class="separator"></div>
                 <div class="contact-info">
-                    <div class="contact-info">
-                        <span class="contact-icon"><i class="fas fa-envelope"></i></span>
-                        <div>
-                            <span class="contact-label">EMAIL</span>
-                            <p><a href="mailto:zxc1112508@gmail.com">zxc1112508@gmail.com</a></p>
-                        </div>
+                    <span class="contact-icon"><i class="fas fa-envelope"></i></span>
+                    <div>
+                        <span class="contact-label">EMAIL</span>
+                        <p><a href="mailto:zxc1112508@gmail.com">zxc1112508@gmail.com</a></p>
                     </div>
                 </div>
                 <div class="contact-info">
-                    <span class="contact-icon"><i class="fas fa-location-dot"></i></span>
+                    <span class="contact-icon"><i class="fas fa-map-marker-alt"></i></span>
                     <div>
-                      <span class="contact-label">居住地</span>
-                      <p>Taichung, Taiwan</p>
+                        <span class="contact-label">居住地</span>
+                        <p>Taichung, Taiwan</p>
                     </div>
-                  </div>
-                   
+                </div>
             </div>
 
             <div class="main-content">
