--- a/index.html
+++ b/index.html
@@ -73,6 +73,13 @@
                             <p><a href="mailto:zxc1112508@gmail.com">zxc1112508@gmail.com</a></p>
                         </div>
                     </div>
+                    <div class="contact-info">
+                        <span class="contact-icon"><i class="fa-brands fa-discord"></i></span>
+                        <div>
+                            <span class="contact-label">Discord</span>
+                            <p><a href="https://discord.com/users/514426689913356288">yu_0715</a></p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
