--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
                 <p>南臺科技大學 資訊工程系</p>
                 <div class="separator"></div>
                 <div class="contact-info">
-                    <span class="contact-icon"><i class="fas fa-envelope"></i></span>
+                    <span class="contact-icon"><i class="fas fa-envelope" style="color: #ffdb70;"></i></span>
                     <div>
                         <span class="contact-label">EMAIL</span>
                         <p><a href="mailto:zxc1112508@gmail.com">zxc1112508@gmail.com</a></p>
                     </div>
                 </div>
                 <div class="contact-info">
-                    <span class="contact-icon"><i class="fas fa-map-marker-alt"></i></span>
+                    <span class="contact-icon"><i class="fas fa-map-marker-alt" style="color: #ffdb70;"></i></span>
                     <div>
                         <span class="contact-label">居住地</span>
                         <p>Taichung, Taiwan</p>
@@ -66,15 +66,23 @@
 
                 <div id="contact" class="content hidden">
                     <h2>Contact</h2>
+                    <p>This is the Contact page.</p>
                     <div class="contact-info">
-                        <span class="contact-icon"><i class="fas fa-envelope"></i></span>
+                        <span class="contact-icon"><i class="fas fa-envelope" style="color: #ffdb70;"></i></span>
                         <div>
-                            <span class="contact-label">EMAIL</span>
+                            <span class="contact-label">個人EMAIL</span>
                             <p><a href="mailto:zxc1112508@gmail.com">zxc1112508@gmail.com</a></p>
                         </div>
                     </div>
                     <div class="contact-info">
-                        <span class="contact-icon"><i class="fa-brands fa-discord"></i></span>
+                        <span class="contact-icon"><i class="fas fa-envelope" style="color: #ffdb70;"></i></span>
+                        <div>
+                            <span class="contact-label">學校EMAIL</span>
+                            <p><a href="mailto:4a9g0067@office.stust.edu.tw">4a9g0067@office.stust.edu.tw</a></p>
+                        </div>
+                    </div>
+                    <div class="contact-info">
+                        <span class="contact-icon"><i class="fa-brands fa-discord" style="color: #ffdb70;"></i></span>
                         <div>
                             <span class="contact-label">Discord</span>
                             <p><a href="https://discord.com/users/514426689913356288">yu_0715</a></p>
