--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div class="container">
         <div class="content-wrapper">
             <div class="sidebar">
-                <img src="assets/IMG_6316.jpg" alt="Profile Picture">
+                <img src="assets/1111.gif" alt="Profile Picture">
                 <h2>曾柏瑜</h2>
                 <p>南臺科技大學 資訊工程系</p>
                 <div class="separator"></div>
@@ -32,37 +32,19 @@
             <div class="main-content">
                 <div class="menu">
                     <a href="#about" class="selected">About</a>
-                    <a href="#speech">Speech</a>
-                    <a href="#resume">Resume</a>
-                    <a href="#articles">Articles</a>
-                    <a href="#schedule">Schedule</a>
+                    <a href="#project">Project</a>
                     <a href="#contact">Contact</a>
                 </div>
 
                 <div id="about" class="content">
                     <h2>About</h2>
-                    <p>This is the About page.</p>
+                    <p>My name is 曾柏瑜 studying in the Southern Taiwan University of Science and Technology. My interest is in programming, especially in the field of AI and computer vision and I would like to work in an information related field.</p>
                     <h2>Pogramming Languages</h2>
                 </div>
 
-                <div id="speech" class="content hidden">
-                    <h2>Speech</h2>
-                    <p>This is the Speech page.</p>
-                </div>
-
-                <div id="resume" class="content hidden">
-                    <h2>Resume</h2>
+                <div id="project" class="content hidden">
+                    <h2>Project</h2>
                     <p>This is the Resume page.</p>
-                </div>
-
-                <div id="articles" class="content hidden">
-                    <h2>Articles</h2>
-                    <p>This is the Articles page.</p>
-                </div>
-
-                <div id="schedule" class="content hidden">
-                    <h2>Schedule</h2>
-                    <p>This is the Schedule page.</p>
                 </div>
 
                 <div id="contact" class="content hidden">
