--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>個人網頁</title>
     <link rel="stylesheet" type="text/css" href="css/styles.css">
-    <script src="https://kit.fontawesome.com/97fd0beeb0.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/2a5ec4a7f9.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="container">
@@ -40,16 +40,43 @@
                     <h2>About</h2>
                     <p>My name is 曾柏瑜 studying in the Southern Taiwan University of Science and Technology. My interest is in programming, especially in the field of AI and computer vision and I would like to work in an information related field.</p>
                     <h2>Pogramming Languages</h2>
+                    <div class="programming-languages">
+                        <div class="language">
+                            <span class="language-icon"><i class="fas fa-code" style="color: #ffdb70;"></i></span>
+                            <span class="language-name">Python</span>
+                        </div>
+                        <div class="language">
+                            <span class="language-icon"><i class="fas fa-code" style="color: #ffdb70;"></i></span>
+                            <span class="language-name">C</span>
+                        </div>
+                        <div class="language">
+                            <span class="language-icon"><i class="fas fa-code" style="color: #ffdb70;"></i></span>
+                            <span class="language-name">C++</span>
+                        </div>
+                    </div>
+                    <h2>Field</h2>
+                    <div class="fields">
+                        <div class="field">
+                            <span class="field-icon"><i class="fas fa-robot" style="color: #ffdb70;"></i></span>
+                            <span class="field-name">Machine Learning</span>
+                        </div>
+                        <div class="field">
+                            <span class="field-icon"><i class="fas fa-brain" style="color: #ffdb70;"></i></span>
+                            <span class="field-name">Deep Learning</span>
+                        </div>
+                        <div class="field">
+                            <span class="field-icon"><i class="fas fa-eye" style="color: #ffdb70;"></i></span>
+                            <span class="field-name">Computer Vision</span>
+                        </div>
+                    </div>
                 </div>
 
                 <div id="project" class="content hidden">
                     <h2>Project</h2>
-                    <p>This is the Resume page.</p>
                 </div>
 
                 <div id="contact" class="content hidden">
                     <h2>Contact</h2>
-                    <p>This is the Contact page.</p>
                     <div class="contact-info">
                         <span class="contact-icon"><i class="fas fa-envelope" style="color: #ffdb70;"></i></span>
                         <div>
